[package]
name = "geo-booleanop2"
version = "0.3.3"
authors = ["angcyo@126.com", "Bodo Junglas <junglas@objectcode.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustStudioIst/rust-geo-booleanop"
description = "Rust implementation of the Martinez-Rueda Polygon Clipping Algorithm"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
# https://crates.io/crates/geo-types
geo-types = { version = "0.7.16", default-features = false }
num-traits = "0.2.19"
robust = "1.2"
float_next_after = "1.0"

[dev-dependencies]
rand = "0.9.1"

[features]
debug-booleanop = []
